--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -11,7 +11,16 @@ tasks:
   run:
     desc: Run the application with docker
     cmds:
-      - docker run -p 8080:8080 myapp {{.CLI_ARGS}}
+      - docker run -p 8080:8080 myapp
+
+  run-inmemory:
+    desc: Run the application with docker
+    deps:
+      - build
+    cmds:
+      - docker run -p 8080:8080 myapp --inmemory
+
+
 
   up:
     desc: Start the application with docker-compose
